tests/baselines/reference/primitiveTypeAsInterfaceNameGeneric.errors.txt
primitiveTypeAsInterfaceNameGeneric.ts(1,11): error TS2427: Interface name cannot be 'number'.


==== primitiveTypeAsInterfaceNameGeneric.ts (1 errors) ====
    interface number<T> {}
              ~~~~~~
!!! error TS2427: Interface name cannot be 'number'.